--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,7 +11,8 @@ flake8==3.7.*
 pytz==2018.5
 
 # Database.
-Flask-SQLAlchemy==2.4.*
+SQLAlchemy==1.3.23
+Flask-SQLAlchemy==2.4.4
 pymysql==0.10.0
 
 # Forms.
