--- a/.env_example
+++ b/.env_example
@@ -27,3 +27,9 @@ ADMIN_QUERY_CACHE_TIMEOUT=240
 CELERYBEAT_MAX_LOOP_INTERVAL=30
 
 VIEW_COUNT_TASK_PERIOD=600
+
+KEYCLOAK_ADDRESS=keycloak
+KEYCLOAK_SERVER_PORT=8080
+KEYCLOAK_REALM_NAME=my_realm
+KEYCLOAK_CLIENT_ID=tracker
+KEYCLOAK_ADMIN_ROLE=tracker_role_admin
