--- a/.env_example
+++ b/.env_example
@@ -6,8 +6,6 @@ PYTHONBUFFERED=TRUE
 DEBUG_MODE=FALSE
 SERVER_NAME=localhost:9000
 
-MYSQL_USERS_DATABASE=wordnet_users
-
 MYSQL_DATABASE=
 MYSQL_USERNAME=
 MYSQL_PASSWORD=
@@ -32,4 +30,5 @@ KEYCLOAK_ADDRESS=keycloak
 KEYCLOAK_SERVER_PORT=8080
 KEYCLOAK_REALM_NAME=my_realm
 KEYCLOAK_CLIENT_ID=tracker
+KEYCLOAK_CLIENT_SECRET=
 KEYCLOAK_ADMIN_ROLE=tracker_role_admin
