--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,6 @@
 Flask==1.1.2
 werkzeug==0.16.0
+requests
 
 # Application server for both development and production.
 gunicorn==20.0.*
@@ -14,6 +15,7 @@ pytz==2018.5
 SQLAlchemy==1.3.23
 Flask-SQLAlchemy==2.4.4
 pymysql==0.10.0
+sqlitedict==1.7.0
 
 # Forms.
 Flask-WTF==0.14.*
@@ -25,7 +27,6 @@ celery-redbeat==1.0.0
 Flask-Admin==1.5.6
 flask-debugtoolbar==0.10.0
 flask-less==0.4
-Flask-Login==0.4.*
 flask-oidc==1.4.0
 Flask-Limiter==1.1.*
 python-memcached==1.59
