Limit memory for celery service, get rid of users db scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,10 @@ services:
       - redis
       - celery
     command: sh -c "python wait-for-db.py -u mysql+pymysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@${MYSQL_HOST}:23306/${MYSQL_DATABASE} -t 5 &&
-      python wait-for-db.py -u mysql+pymysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@${MYSQL_HOST}:23306/${MYSQL_USERS_DATABASE} -t 5 &&
       gunicorn -c 'python:config.gunicorn' --reload 'tracker.app:create_app()'"
     ports:
       - '9000:5000'
 
-# ======== Development only ========
   keycloak:
     image: jboss/keycloak
     environment:
@@ -23,7 +21,6 @@ services:
       KEYCLOAK_PASSWORD: admin
     ports:
       - '8080:8080'
-# ======== Development only ========
 
   redis:
     image: redis:5.0.5-alpine
@@ -38,8 +35,11 @@ services:
     depends_on:
       - redis
     command: sh -c "python wait-for-db.py -u mysql+pymysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@${MYSQL_HOST}:23306/${MYSQL_DATABASE} -t 5 &&
-      python wait-for-db.py -u mysql+pymysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@${MYSQL_HOST}:23306/${MYSQL_USERS_DATABASE} -t 5 &&
       python celery_start.py"
+    deploy:
+      resources:
+          limits:
+            memory: 500M
 
   celerybeat:
     image: tracker_web
@@ -49,5 +49,4 @@ services:
     depends_on:
     - redis
     command: sh -c "python wait-for-db.py -u mysql+pymysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@${MYSQL_HOST}:23306/${MYSQL_DATABASE} -t 5 &&
-      python wait-for-db.py -u mysql+pymysql://${MYSQL_USERNAME}:${MYSQL_PASSWORD}@${MYSQL_HOST}:23306/${MYSQL_USERS_DATABASE} -t 5 &&
       python celerybeat_start.py"
