--- a/.env_example
+++ b/.env_example
@@ -3,32 +3,15 @@ TRACKER_CONFIG_FILE=settings
 
 PYTHONBUFFERED=TRUE
 
-DEBUG_MODE=FALSE
+DEBUG_MODE=TRUE
 SERVER_NAME=localhost:9000
 
-MYSQL_DATABASE=
-MYSQL_USERNAME=
-MYSQL_PASSWORD=
-MYSQL_HOST=
-MYSQL_PORT=
+KEYCLOAK_ADDRESS=host.docker.internal
+KEYCLOAK_SERVER_PORT=8008
+KEYCLOAK_REALM_NAME=master
+KEYCLOAK_CLIENT_ID=wordnetloom
+KEYCLOAK_CLIENT_SECRET=**********
+KEYCLOAK_ADMIN_ROLE=admin
 
-CACHE_SERVICE=redis:redis:6379
+API_URL=http://host.docker.internal:8080/wordnetloom-server/resources/tracker/
 
-CELERY_BROKER_URL=redis://redis:6379
-CELERY_RESULT_BACKEND=redis://redis:6379
-CELERY_WORKERS_NUMBER=3
-
-ADMIN_QUERY_TASK_PERIOD=120
-ADMIN_QUERY_TASK_EXPIRE=120
-ADMIN_QUERY_CACHE_TIMEOUT=240
-
-CELERYBEAT_MAX_LOOP_INTERVAL=30
-
-VIEW_COUNT_TASK_PERIOD=600
-
-KEYCLOAK_ADDRESS=keycloak
-KEYCLOAK_SERVER_PORT=8080
-KEYCLOAK_REALM_NAME=my_realm
-KEYCLOAK_CLIENT_ID=tracker
-KEYCLOAK_CLIENT_SECRET=
-KEYCLOAK_ADMIN_ROLE=tracker_role_admin
